2002-02-08  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03021] Bug#132934: w3m should recognize file:/uris
				in chkURLBuffer function
	* main.c (chkURLBuffer): add "file:" 

2002-02-08  Yuji Abe <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03017] URI scheme is case insensitive
	* url.c (searchURIMethods): s/strcmp/strcasecmp/

2002-02-08  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 03011] segmentation fault on <input> tag without <form>
	* file.c (process_input): tmp initialization fix

2002-02-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [emacs-w3m:02733] for emacs-w3m better rendering with inline image
	* main.c (MAIN): activeImage = TRUE when -halfdump & display_image=1

2002-02-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03006] fix form order in table
	* file.c (process_form): static
			fix form index order
			method should be quoted
	* file.c (process_form): added
	* file.c (HTMLlineproc2body): add form_id
	* html.c (ALST_FORM_INT): added
	* html.c (form_int): update

2002-02-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03005] fix Bad cert ident
	* istream.c (ssl_match_cert_ident): added
	* istream.c (ssl_check_cert_ident): use ssl_match_cert_ident()

2002-02-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02999] don't ask accept bad cert when background downloading
	* file.c (getAuthCookie): if QuietMessage, return NULL
	* file.c (inputAnswer): if QuietMessage, input "n"

2002-02-05  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02991] form support in w3m -halfdump foo.html|w3m -halfload
	* fm.h (DUMP_HALFEXTRA): deleted
	* proto.h (process_select): return Str
	* file.c (process_img): process_form() fix
	* file.c (process_input): process_form() fix
	* file.c (process_select): return Str
				process_form() fix
	* file.c (process_textarea): process_form() fix
	* file.c (process_form): support -halfdump
	* file.c (HTMLtagproc1): delete case HTML_FORM_INT, HTML_N_FORM_INT